Update minhas escolhas

--- a/index.html
+++ b/index.html
@@ -35,16 +35,17 @@
                         <span>Novidades</span>
                     </a>
                 </li>
-                <br /><br />
-                
-                <li>
-                    <a href="">
-                        <span class="fa fa-heart"></span>
-                        <span>Minhas Escolhas</span>
-                    </a>
-                </li>
             </ul>
         </nav>
+        <div class="library">
+            <div class="library_content">
+                <button class="library_button">
+                    <span class="fa fa-heart"></span>
+                    <span>Minhas Escolhas</span>
+                </button>
+                <span class="fa fa-plus"></span>
+            </div>
+        </div>
     </div>
 </body>
 </html>
