--- a/index.html
+++ b/index.html
@@ -45,7 +45,39 @@
                 </button>
                 <span class="fa fa-plus"></span>
             </div>
+            <section class="section-playlist">
+                <div class="section-playlist_content">
+                    <span class="text title">Crie sua primeira playlist</span>
+                    <span class="text subtitle">É facil, vamos te ajudar!</span>
+                    <div class="button-wrapper">
+                        <button class="section-playlist_button">
+                        <span>Criar Playlist</span>
+                        </button>
+                        <span class="fa fa-music"></span>    
+                    </div>                   
+                </div>
+            </section>
+            <div class="languages">
+                <button class="languages_button">
+                    <span class="fa fa-globe"></span>
+                    <span>Português do Brasil</span>
+                </button>    
+            </div>
+            <div class="cookies">
+                <a href="">Cookies</a>
+            </div>
         </div>
     </div>
+    <footer class="disclaimer-premium">
+        <div class="text">
+            <p class="disclaimer-premium_title"> Teste a versão paga por 7 dias</p>
+            <p class="disclaimer-premium_subtitle">
+                Inscreva-se para curtir o seu som preferido. Não é necessário cartão de crédito.
+            </p>
+        </div>
+        <div class="disclaimer-premium_bottom">
+            <a href="#" class="disclaimer-button">Faça o cadastro aqui</a>
+        </div>
+    </footer>
 </body>
 </html>
